chore (admin-ui): update incorrect translate to use `count` & `code` variables instead of translated text
Signed-off-by: l2D <20911264+l2D@users.noreply.github.com>

--- a/packages/admin-ui/ui/public/locales/th/translation.json
+++ b/packages/admin-ui/ui/public/locales/th/translation.json
@@ -156,8 +156,8 @@
   "product-general-section-discountable": "ส่วนลด",
   "product-general-section-true": "จริง",
   "product-general-section-false": "เท็จ",
-  "product-general-section-count_one": "{{นับ}}",
-  "product-general-section-count_other": "{{นับ}}",
+  "product-general-section-count_one": "{{count}}",
+  "product-general-section-count_other": "{{count}}",
   "product-general-section-sales-channels": "ช่องทางการขาย",
   "product-media-section-edit-media": "แก้ไขสื่อ",
   "product-media-section-upload-images-error": "เกิดข้อผิดพลาดขณะพยายามอัปโหลดภาพ",
@@ -181,8 +181,8 @@
   "product-thumbnail-section-used-to-represent-your-product-during-checkout-social-sharing-and-more": "ใช้เพื่อนำเสนอผลิตภัณฑ์ของคุณระหว่างการชำระเงิน การแชร์ผ่านโซเชียล และอื่นๆ",
   "product-thumbnail-section-cancel": "ยกเลิก",
   "product-thumbnail-section-save-and-close": "บันทึกและปิด",
-  "product-variant-tree-count_one": "{{นับ}}",
-  "product-variant-tree-count_other": "{{นับ}}",
+  "product-variant-tree-count_one": "{{count}}",
+  "product-variant-tree-count_other": "{{count}}",
   "product-variant-tree-add-prices": "เพิ่มราคา",
   "product-variants-section-add-variant": "เพิ่มรุ่น",
   "product-variants-section-cancel": "ยกเลิก",
@@ -234,8 +234,8 @@
   "rma-select-product-table-product-details": "รายละเอียดสินค้า",
   "rma-select-product-table-quantity": "ปริมาณ",
   "rma-select-product-table-refundable": "ขอคืนเงินได้",
-  "rma-select-product-table-images-witch-count_one": "{{นับ}}",
-  "rma-select-product-table-images-witch-count_other": "{{นับ}}",
+  "rma-select-product-table-images-witch-count_one": "{{count}}",
+  "rma-select-product-table-images-witch-count_other": "{{count}}",
   "rma-select-product-table-select-reason": "เลือกเหตุผล",
   "sidebar-store": "ร้าน",
   "sidebar-orders": "คำสั่งซื้อ",
@@ -584,8 +584,8 @@
   "templates-remove-invite": "ลบคำเชิญ",
   "templates-invitiation-has-been-removed": "คำเชิญถูกลบออกแล้ว",
   "multiselect-choose-categories": "เลือกหมวดหมู่",
-  "domain-categories-multiselect-selected-with-counts_one": "{{นับ}}",
-  "domain-categories-multiselect-selected-with-counts_other": "{{นับ}}",
+  "domain-categories-multiselect-selected-with-counts_one": "{{count}}",
+  "domain-categories-multiselect-selected-with-counts_other": "{{count}}",
   "details-success": "สำเร็จ",
   "details-updated-products-in-collection": "อัพเดทสินค้าในคอลเลกชัน",
   "details-error": "ข้อผิดพลาด",
@@ -665,8 +665,8 @@
   "tags-save-and-go-back": "บันทึกและย้อนกลับ",
   "tags-save-and-close": "บันทึกและปิด",
   "edit-condition-add-conditions": "เพิ่มเงื่อนไข",
-  "edit-condition-selected-with-count_one": "{{นับ}}",
-  "edit-condition-selected-with-count_other": "{{นับ}}",
+  "edit-condition-selected-with-count_one": "{{count}}",
+  "edit-condition-selected-with-count_other": "{{count}}",
   "edit-condition-deselect": "ยกเลิกการเลือก",
   "edit-condition-remove": "ลบ",
   "edit-condition-add": "เพิ่ม",
@@ -998,7 +998,7 @@
   "refund-amount-form-the-refund-amount-must-be-at-least-0": "จำนวนเงินคืนจะต้องมีอย่างน้อย 0",
   "reservation-indicator-awaiting-reservation-count": "ไม่ได้จอง {{awaitingReservation}} รายการ",
   "reservation-indicator-this-item-has-been-fulfilled": "รายการนี้ได้รับการตอบสนองแล้ว",
-  "edit-reservation-button-quantity-item-location-name": "{{จำนวน}} รายการ: ${{locationName}}",
+  "edit-reservation-button-quantity-item-location-name": "{{quantity}} รายการ: ${{locationName}}",
   "reservation-indicator-edit-reservation": "แก้ไขการจอง",
   "rma-summaries-claimed-items": "สิ่งของที่ขอเคลม",
   "rma-summaries-replacement-items": "รายการทดแทน",
@@ -1378,7 +1378,7 @@
   "components-add-discount": "เพิ่มส่วนลด",
   "components-summer-10": "ซัมเมอร์ 10",
   "components-discount": "การลดราคา",
-  "select-shipping-code": "(รหัส: {{รหัส}})",
+  "select-shipping-code": "(รหัส: {{code}})",
   "components-type": "พิมพ์",
   "components-value": "ค่า",
   "components-address": "ที่อยู่",
@@ -1668,8 +1668,8 @@
   "modals-sales-channels-removed-from-the-scope": "ช่องทางการขายถูกลบออกจากขอบเขต",
   "modals-error-occurred-while-removing-sales-channels-from-the-scope-of-the-key": "เกิดข้อผิดพลาดขณะลบช่องทางการขายออกจากขอบเขตของคีย์",
   "modals-edit-sales-channels": "แก้ไขช่องทางการขาย",
-  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_one": "{{นับ}}",
-  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_other": "{{นับ}}",
+  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_one": "{{count}}",
+  "publishable-api-keys-modals-manage-sales-channels-selected-with-counts_other": "{{count}}",
   "modals-deselect": "ยกเลิกการเลือก",
   "modals-remove": "ลบ",
   "modals-add-channels": "เพิ่มช่อง",
@@ -1748,8 +1748,8 @@
   "tables-details": "รายละเอียด",
   "tables-remove-from-the-channel": "ลบออกจากช่อง",
   "tables-products": "สินค้า",
-  "sales-channels-table-placeholder-selected-with-counts_one": "{{นับ}}",
-  "sales-channels-table-placeholder-selected-with-counts_other": "{{นับ}}",
+  "sales-channels-table-placeholder-selected-with-counts_one": "{{count}}",
+  "sales-channels-table-placeholder-selected-with-counts_other": "{{count}}",
   "tables-remove": "ลบ",
   "components-successfully-updated-currency": "อัปเดตสกุลเงินสำเร็จแล้ว",
   "components-default": "ค่าเริ่มต้น",
@@ -1767,8 +1767,8 @@
   "store-currencies-add-store-currencies": "เพิ่มสกุลเงินของร้านค้า",
   "store-currencies-current-store-currencies": "สกุลเงินของร้านค้าปัจจุบัน",
   "store-currencies-close": "ปิด",
-  "current-currencies-screen-selected-with-count_one": "{{นับ}}",
-  "current-currencies-screen-selected-with-count_other": "{{นับ}}",
+  "current-currencies-screen-selected-with-count_one": "{{count}}",
+  "current-currencies-screen-selected-with-count_other": "{{count}}",
   "store-currencies-deselect": "ยกเลิกการเลือก",
   "store-currencies-remove": "ลบ",
   "store-currencies-add-currencies": "เพิ่มสกุลเงิน",
@@ -2006,6 +2006,6 @@
   "users-back-to-settings": "กลับไปที่การตั้งค่า",
   "users-the-team": "ทีมงาน",
   "users-manage-users-of-your-medusa-store": "จัดการผู้ใช้ร้านค้า Medusa ของคุณ",
-  "users-count_one": "{{นับ}}",
-  "users-count_other": "{{นับ}}"
+  "users-count_one": "{{count}}",
+  "users-count_other": "{{count}}"
 }
