Improve german translation

--- a/packages/admin-ui/ui/public/locales/de/translation.json
+++ b/packages/admin-ui/ui/public/locales/de/translation.json
@@ -3,12 +3,12 @@
   "sales-channels-display-available-count": "Verfügbar in <2>{{availableChannelsCount}}</2> von <6>{{totalChannelsCount}}</6> Vertriebskanälen",
   "activity-drawer-activity": "Aktivität",
   "activity-drawer-no-notifications-title": "Es ist ruhig hier drin...",
-  "activity-drawer-no-notifications-description": "Im Moment haben Sie noch keine Meldungen, aber sobald Sie welche haben, werden sie hier zu sehen sein",
+  "activity-drawer-no-notifications-description": "Im Moment haben Sie keine Meldungen, aber sobald Sie welche haben, werden sie hier zu sehen sein",
   "activity-drawer-error-title": "Oh nein...",
   "activity-drawer-error-description": "Beim Abrufen Ihrer Benachrichtigungen ist etwas schief gelaufen - wir versuchen es weiter",
-  "activity-drawer-processing": "Verarbeitung...",
+  "activity-drawer-processing": "In Arbeit...",
   "analytics-config-form-title": "Anonymisierung meiner Nutzungsdaten",
-  "analytics-config-form-description": "Sie können sich dafür entscheiden, Ihre Nutzungsdaten zu anonymisieren. Wenn Sie diese Option wählen, werden wir Ihre persönlichen Daten, wie z.B. Ihren Namen und Ihre E-Mail-Adresse, nicht erfassen.",
+  "analytics-config-form-description": "Sie können sich dafür entscheiden, Ihre Nutzungsdaten zu anonymisieren. Wenn Sie diese Option wählen, werden wir Ihre persönlichen Daten, wie z.B. Ihren Namen und Ihre E-Mail-Adresse, nicht verarbeiten.",
   "analytics-config-form-opt-out": "Keine Freigabe meiner Nutzungsdaten",
   "analytics-config-form-opt-out-later": "Sie können der Weitergabe Ihrer Nutzungsdaten jederzeit widersprechen",
   "analytics-preferences-success": "Erfolg",
@@ -25,7 +25,7 @@
   "organisms-delete-successful": "Löschen erfolgreich",
   "organisms-are-you-sure-you-want-to-delete": "Sind Sie sicher, dass Sie löschen wollen?",
   "organisms-no-cancel": "Nein, abbrechen",
-  "organisms-yes-remove": "Ja, entfernen",
+  "organisms-yes-remove": "Ja, löschen",
   "details-collapsible-hide-additional-details": "Zusätzliche Details ausblenden",
   "details-collapsible-show-additional-details": "Zusätzliche Details anzeigen",
   "edit-user-modal-success": "Erfolg",
@@ -39,7 +39,7 @@
   "edit-user-modal-email": "E-Mail",
   "edit-user-modal-cancel": "Abbrechen",
   "edit-user-modal-save": "Speichern",
-  "error-boundary-back-to-dashboard": "Zurück zum Armaturenbrett",
+  "error-boundary-back-to-dashboard": "Zurück zum Dashboard",
   "error-boundary-an-unknown-error-occured": "Ein unbekannter Fehler ist aufgetreten",
   "error-boundary-bad-request": "Schlechte Anfrage",
   "error-boundary-you-are-not-logged-in": "Sie sind nicht eingeloggt",
