Improve german translation (even more)

--- a/packages/admin-ui/ui/public/locales/de/translation.json
+++ b/packages/admin-ui/ui/public/locales/de/translation.json
@@ -41,23 +41,23 @@
   "edit-user-modal-save": "Speichern",
   "error-boundary-back-to-dashboard": "Zurück zum Dashboard",
   "error-boundary-an-unknown-error-occured": "Ein unbekannter Fehler ist aufgetreten",
-  "error-boundary-bad-request": "Schlechte Anfrage",
+  "error-boundary-bad-request": "Fehlerhafte Anfrage",
   "error-boundary-you-are-not-logged-in": "Sie sind nicht eingeloggt",
-  "error-boundary-you-do-not-have-permission-perform-this-action": "Sie haben keine Erlaubnis, diese Aktion durchzuführen",
+  "error-boundary-you-do-not-have-permission-perform-this-action": "Sie haben keine Berechtigung, diese Aktion durchzuführen",
   "error-boundary-page-was-not-found": "Seite wurde nicht gefunden",
   "error-boundary-an-unknown-server-error-occured": "Ein unbekannter Serverfehler ist aufgetreten",
   "error-boundary-503": "Server ist derzeit nicht verfügbar",
   "error-boundary-500": "Es ist ein Fehler mit unbestimmter Ursache aufgetreten, der höchstwahrscheinlich auf ein technisches Problem auf unserer Seite zurückzuführen ist. Bitte versuchen Sie, die Seite zu aktualisieren. Wenn das Problem weiterhin auftritt, wenden Sie sich an Ihren Administrator",
   "error-boundary-400": "Die Anfrage war fehlerhaft, korrigieren Sie Ihre Anfrage und versuchen Sie es noch einmal",
   "error-boundary-401": "Sie sind nicht angemeldet, bitte melden Sie sich an, um fortzufahren",
-  "error-boundary-403": "Sie haben keine Erlaubnis, diese Aktion auszuführen. Wenn Sie glauben, dass dies ein Fehler ist, wenden Sie sich an Ihren Administrator",
+  "error-boundary-403": "Sie haben keine Berechtigung, diese Aktion auszuführen. Wenn Sie glauben, dass dies ein Fehler ist, wenden Sie sich an Ihren Administrator",
   "error-boundary-404": "Die von Ihnen angeforderte Seite wurde nicht gefunden, bitte überprüfen Sie die URL und versuchen Sie es erneut",
   "error-boundary-500-2": "Der Server war nicht in der Lage, Ihre Anfrage zu bearbeiten. Dies ist höchstwahrscheinlich auf ein technisches Problem auf unserer Seite zurückzuführen. Bitte versuchen Sie es erneut. Wenn das Problem weiterhin auftritt, wenden Sie sich an Ihren Administrator",
   "error-boundary-503-2": "Der Server ist vorübergehend nicht verfügbar, und Ihre Anfrage konnte nicht bearbeitet werden. Bitte versuchen Sie es später erneut. Wenn das Problem weiterhin auftritt, wenden Sie sich an Ihren Administrator",
   "export-modal-title": "Initialisieren Sie einen Export Ihrer Daten",
   "export-modal-cancel": "Abbrechen",
   "export-modal-export": "Exportieren",
-  "file-upload-modal-upload-a-new-photo": "Ein neues Foto hochladen",
+  "file-upload-modal-upload-a-new-photo": "Ein neues Bild hochladen",
   "gift-card-banner-edit": "Bearbeiten",
   "gift-card-banner-unpublish": "Veröffentlichung aufheben",
   "gift-card-banner-publish": "Veröffentlichen",
@@ -97,7 +97,7 @@
   "invite-modal-invitation-sent-to": "Einladung gesendet an {{user}}",
   "invite-modal-error": "Fehler",
   "invite-modal-member": "Mitglied",
-  "invite-modal-admin": "Verwaltung",
+  "invite-modal-admin": "Administrator",
   "invite-modal-developer": "Entwickler",
   "invite-modal-invite-users": "Benutzer einladen",
   "invite-modal-email": "E-Mail",
@@ -105,7 +105,7 @@
   "invite-modal-select-role": "Rolle auswählen",
   "invite-modal-cancel": "Abbrechen",
   "invite-modal-invite": "Einladen",
-  "login-card-no-match": "Diese Angaben stimmen nicht mit unseren Unterlagen überein",
+  "login-card-no-match": "Diese Angaben stimmen nicht mit unseren überein",
   "login-card-log-in-to-medusa": "Bei Medusa anmelden",
   "login-card-email": "E-Mail",
   "login-card-password": "Kennwort",
@@ -168,8 +168,8 @@
   "product-thumbnail-section-upload": "Hochladen",
   "product-thumbnail-section-upload-thumbnail-error": "Beim Hochladen des Vorschaubildes ist etwas schief gelaufen",
   "product-thumbnail-section-you-might-not-have-a-file-service-configured-please-contact-your-administrator": "Sie haben möglicherweise keinen Dateidienst konfiguriert. Bitte wenden Sie sich an Ihren Administrator",
-  "product-thumbnail-section-upload-thumbnail": "Thumbnail hochladen",
-  "product-thumbnail-section-thumbnail": "Daumennagel",
+  "product-thumbnail-section-upload-thumbnail": "Vorschaubild hochladen",
+  "product-thumbnail-section-thumbnail": "Vorschaubild",
   "product-thumbnail-section-used-to-represent-your-product-during-checkout-social-sharing-and-more": "Wird verwendet, um Ihr Produkt während der Kaufabwicklung, der Weitergabe in sozialen Netzwerken und mehr darzustellen.",
   "product-thumbnail-section-cancel": "Abbrechen",
   "product-thumbnail-section-save-and-close": "Speichern und schließen",
@@ -200,7 +200,7 @@
   "product-variants-section-successfully-updated-product-options": "Erfolgreich aktualisierte Produktoptionen",
   "product-variants-section-product-options": "Produktoptionen",
   "product-variants-section-option-title": "Titel der Option",
-  "product-variants-section-option-title-is-required": "Option title is required",
+  "product-variants-section-option-title-is-required": "Optionstitel ist erforderlich",
   "product-variants-section-add-an-option": "Eine Option hinzufügen",
   "product-variants-section-inventory": "Bestandsaufnahme",
   "product-variants-section-title": "Titel",
@@ -285,7 +285,7 @@
   "collection-modal-successfully-created-collection": "Erfolgreich erstellte Sammlung",
   "collection-modal-edit-collection": "Sammlung bearbeiten",
   "collection-modal-add-collection": "Sammlung hinzufügen",
-  "collection-modal-description": "Um eine Sammlung zu erstellen, brauchen Sie nur einen Titel und einen Griff",
+  "collection-modal-description": "Um eine Sammlung zu erstellen, brauchen Sie nur einen Titel und ein Schlagwort",
   "collection-modal-details": "Einzelheiten",
   "collection-modal-title-label": "Titel",
   "collection-modal-title-placeholder": "Sonnenbrille",
@@ -411,7 +411,7 @@
   "gift-card-table-none": "Keine",
   "gift-card-table-created": "Erstellt",
   "image-table-file-name": "Dateiname",
-  "image-table-thumbnail": "Daumennagel",
+  "image-table-thumbnail": "Vorschaubild",
   "image-table-select-thumbnail-image-for-product": "Wählen Sie das Bild aus, das Sie als Vorschaubild für dieses Produkt verwenden möchten",
   "inventory-table-inventory-items": "Vorratsposten",
   "inventory-table-actions-adjust-availability": "Verfügbarkeit anpassen",
@@ -587,7 +587,7 @@
   "details-metadata": "Metadaten",
   "details-edit-products": "Produkte bearbeiten",
   "details-products-in-this-collection": "Produkte in dieser Sammlung",
-  "details-raw-collection": "Rohsammlung",
+  "details-raw-collection": "Rohdaten",
   "details-delete-collection": "Sammlung löschen",
   "details-successfully-deleted-collection": "Sammlung erfolgreich gelöscht",
   "details-yes-delete": "Ja, löschen",
@@ -611,7 +611,7 @@
   "details-orders_one": "Aufträge {{count}}",
   "details-orders_other": "Aufträge {{count}}",
   "details-an-overview-of-customer-orders": "Ein Überblick über Kundenaufträge",
-  "details-raw-customer": "Roher Kunde",
+  "details-raw-customer": "Rohdaten",
   "groups-group-updated": "Gruppe aktualisiert",
   "groups-group-created": "Gruppe erstellt",
   "groups-the-customer-group-has-been-updated": "Die Kundengruppe wurde aktualisiert",
@@ -725,7 +725,7 @@
   "details-confirm-delete-discount": "Sind Sie sicher, dass Sie diesen Rabatt löschen wollen?",
   "details-delete-discount": "Rabatt löschen",
   "details-back-to-discounts": "Zurück zu den Rabatten",
-  "details-raw-discount": "Rohrabatt",
+  "details-raw-discount": "Rohdaten",
   "discounts-add-discount": "Rabatt hinzufügen",
   "discount-form-add-conditions": "Bedingungen hinzufügen",
   "discount-form-choose-a-condition-type": "Wählen Sie eine Konditionsart",
@@ -821,7 +821,7 @@
   "sections-at-least-one-region-is-required": "Mindestens eine Region ist erforderlich",
   "sections-choose-valid-regions": "Gültige Regionen auswählen",
   "sections-code": "Code",
-  "sections-summersale-10": "SOMMERSALE10",
+  "sections-summersale-10": "SOMMERAKTION10",
   "sections-code-is-required": "Code ist erforderlich",
   "sections-amount-is-required": "Betrag ist erforderlich",
   "sections-amount": "Betrag",
@@ -890,7 +890,7 @@
   "gift-cards-the-best-gift-card": "Die beste Gutschein",
   "gift-cards-description": "Beschreibung",
   "gift-cards-the-best-gift-card-of-all-time": "Die beste Gutschein aller Zeiten",
-  "gift-cards-thumbnail": "Daumennagel",
+  "gift-cards-thumbnail": "Vorschaubild",
   "gift-cards-delete": "Löschen",
   "gift-cards-size-recommended": "1200 x 1600 (3:4) empfohlen, jeweils bis zu 10MB",
   "gift-cards-amount": "Betrag",
@@ -898,11 +898,11 @@
   "gift-cards-create-publish": "Erstellen und veröffentlichen",
   "gift-cards-successfully-updated-gift-card": "Gutschein erfolgreich aktualisiert",
   "gift-cards-gift-cards": "Gutscheine",
-  "gift-cards-manage": "Verwalten Sie die Gutscheine Ihres Medusa-Geschäfts",
+  "gift-cards-manage": "Verwalten Sie die Gutscheine Ihres Onlineshops",
   "gift-cards-are-you-ready-to-sell-your-first-gift-card": "Sind Sie bereit, Ihre erste Gutschein zu verkaufen?",
   "gift-cards-no-gift-card-has-been-added-yet": "Es wurde noch keine Gutschein hinzugefügt",
-  "gift-cards-history": "Geschichte",
-  "gift-cards-see-the-history-of-purchased-gift-cards": "Die Geschichte der gekauften Gutscheine sehen",
+  "gift-cards-history": "Historie",
+  "gift-cards-see-the-history-of-purchased-gift-cards": "Die Historie der gekauften Gutscheine sehen",
   "gift-cards-successfully-deleted-gift-card": "Gutschein erfolgreich gelöscht",
   "gift-cards-yes-delete": "Ja, löschen",
   "gift-cards-delete-gift-card": "Gutschein löschen",
