added missing workflows reference link

--- a/www/apps/docs/content/development/workflows/index.mdx
+++ b/www/apps/docs/content/development/workflows/index.mdx
@@ -404,7 +404,7 @@ const myWorkflow = createWorkflow<
 
 <DocCard item={{
     type: 'link',
-    href: '#',
+    href: '/references/workflows',
     label: 'Workflows API Reference',
     customProps: {
       icon: Icons['academic-cap-solid'],
