--- a/www/apps/docs/content/references/product/IProductModuleService/methods/IProductModuleService.createVariants.mdx
+++ b/www/apps/docs/content/references/product/IProductModuleService/methods/IProductModuleService.createVariants.mdx
@@ -13,13 +13,34 @@ import ParameterTypes from "@site/src/components/ParameterTypes"
 
 This documentation provides a reference to the createVariants method. This belongs to the Product Module.
 
+This method is used to create variants for a product.
+
+## Example
+
+```ts
+import {
+  initialize as initializeProductModule,
+} from "@medusajs/product"
+
+async function createProductVariants (items: {
+  product_id: string,
+  title: string
+}[]) {
+  const productModule = await initializeProductModule()
+
+  const productVariants = await productModule.createVariants(items)
+
+  // do something with the product variants or return them
+}
+```
+
 ## Parameters
 
 <ParameterTypes parameters={[
   {
     "name": "data",
     "type": "[CreateProductVariantDTO](../../interfaces/CreateProductVariantDTO.mdx)[]",
-    "description": "",
+    "description": "The product variants to create.",
     "optional": false,
     "defaultValue": "",
     "expandable": false,
@@ -219,7 +240,7 @@ This documentation provides a reference to the createVariants method. This belon
   {
     "name": "sharedContext",
     "type": "[Context](../../interfaces/Context.mdx)",
-    "description": "",
+    "description": "A context used to share resources, such as transaction manager, between the application and the module.",
     "optional": true,
     "defaultValue": "",
     "expandable": false,
@@ -281,7 +302,7 @@ This documentation provides a reference to the createVariants method. This belon
     "type": "Promise&#60;[ProductVariantDTO](../../interfaces/ProductVariantDTO.mdx)[]&#62;",
     "optional": false,
     "defaultValue": "",
-    "description": "",
+    "description": "The created product variants' details.",
     "expandable": false,
     "children": [
       {
