Add data migration script after running migrations

--- a/www/apps/docs/content/experimental/pricing/install-medusa.mdx
+++ b/www/apps/docs/content/experimental/pricing/install-medusa.mdx
@@ -41,6 +41,7 @@ Run the following command to reflect schema changes into your database:
 
 ```bash
 npx medusa migrations run
+node node_modules/@medusajs/medusa/dist/scripts/migrate-to-pricing-module.js
 ```
 
 ---
