add some transitions, make a text alt input

--- a/packages/admin-ui/ui/public/locales/ar/translation.json
+++ b/packages/admin-ui/ui/public/locales/ar/translation.json
@@ -1305,5 +1305,24 @@
   "Order Placed": "تم تقديم الطلب",
   "Canceled return": "تم إلغاء الإرجاع",
   "Sign out": "تسجيل الخروج",
-  "Search anything...": "ابحث عن أي شيء..."
+  "Search anything...": "ابحث عن أي شيء...",
+  "Inventory item": "عنصر المخزون",
+  "Creation date": "تاريخ الإنشاء",
+  "Created by": "تم الإنشاء بواسطة",
+  "Jump to...": "الانتقال إلى...",
+  "esc": "esc",
+  "Discard": "تجاهل",
+  "Extensions": "التمديدات",
+  "Manage the currencies of your store": "إدارة عملات متجرك",
+  "Manage shipping, payment, and fulfillment across regions": "إدارة الشحن والدفع والوفاء عبر المناطق",
+  "Usage insights": "رؤى الاستخدام",
+  "First name": "الاسم الأول",
+  "Last name": "الاسم الأخير",
+  "Choose default currency": "اختيار العملة الافتراضية",
+  "View": "عرض",
+  "Give your product card a short and clear description Give your product card a short and clear description": "امنح بطاقة منتجك وصفًا قصيرًا وواضحًا امنح بطاقة منتجك وصفًا قصيرًا وواضحًا",
+  "Insert above": "اضف أعلاه",
+  "Insert below": "اضف أدناه",
+  "Clear contents": "حذف المحتوي",
+  "Drafts": "المسودات"
 }
