--- a/packages/admin-ui/ui/public/locales/en-US/translation.json
+++ b/packages/admin-ui/ui/public/locales/en-US/translation.json
@@ -1337,5 +1337,10 @@
   "Last name": "Last name",
   "Choose default currency": "Choose default currency",
   "View": "View",
-  
+  "Give your product card a short and clear description Give your product card a short and clear description": "Give your product card a short and clear description Give your product card a short and clear description",
+  "customers": "customers",
+  "Insert above": "Insert above",
+  "Insert below": "Insert below",
+  "Clear contents": "Clear contents",
+  "Drafts": "Drafts"
 }
