fix lint errors

--- a/www/apps/docs/content/experimental/pricing/install-medusa.mdx
+++ b/www/apps/docs/content/experimental/pricing/install-medusa.mdx
@@ -41,7 +41,7 @@ module.exports = {
 
 ## Step 3: Run Migrations
 
-Run the following command to reflect schema changes into your database:
+Run the following commands to reflect schema changes into your database:
 
 ```bash
 npx medusa migrations run
