chore: revert core integration changes

--- a/www/apps/docs/content/experimental/pricing/install-medusa.mdx
+++ b/www/apps/docs/content/experimental/pricing/install-medusa.mdx
@@ -24,10 +24,6 @@ In `medusa-config.js`, add the pricing module to the exported object under the `
 ```js title=medusa-config.js
 module.exports = {
   // ...
-  featureFlags: {
-    // ...
-    medusa_v2: true,
-  },
   modules: {
     // ...
     pricingService: {
@@ -41,11 +37,10 @@ module.exports = {
 
 ## Step 3: Run Migrations
 
-Run the following commands to reflect schema changes into your database:
+Run the following command to reflect schema changes into your database:
 
 ```bash
 npx medusa migrations run
-node node_modules/@medusajs/medusa/dist/scripts/migrate-to-pricing-module.js
 ```
 
 ---
