fixed issue in workflows reference

--- a/www/apps/docs/content/references/internal-1/interfaces/js_client.internal.internal-1.Context.mdx
+++ b/www/apps/docs/content/references/internal-1/interfaces/js_client.internal.internal-1.Context.mdx
@@ -1,3 +1,9 @@
+---
+reflectionGroups:
+  Constructors: false
+displayed_sidebar: jsClientSidebar
+---
+
 import ParameterTypes from "@site/src/components/ParameterTypes"
 
 # Context
