fix context error

--- a/www/apps/docs/content/references/workflows/interfaces/workflows.StepExecutionContext.mdx
+++ b/www/apps/docs/content/references/workflows/interfaces/workflows.StepExecutionContext.mdx
@@ -40,7 +40,7 @@ The step's context.
   {
     "name": "context",
     "type": "[Context](../../medusa/interfaces/medusa.Context.mdx)",
-    "description": "{@inheritDoc Context}",
+    "description": "A shared context object that is used to share resources between the application and the module.",
     "optional": false,
     "defaultValue": "",
     "expandable": false,
